integracion luis santiago